--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,47 @@
-/* colors*/
-body {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 5rem;
+  background-color: red;
+}
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: gainsboro;
+  height: 100vh;
+  position: fixed;
+  inset: 0;
+  z-index: 1;
+  opacity: 0.9;
+  animation-name: load;
+  animation-duration: 7s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes load {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+.loader-1 {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
   background-color: #9356DC;
 }
+
+/* colors*/
 
 /*# sourceMappingURL=style.css.map */
